--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,10 +6,23 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_graphic.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="Faucet | Supernova" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      property="og:description"
+      content="Faucet is a tool for get testnet tokens in order to test Supernova"
     />
+    <meta property="og:site_name" content="Supernova" />
+    <meta property="og:image" content="public/logo_graphic.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630"></meta>
+    <meta name="twitter:card" content="" />
+    <meta name="twitter:title" content="Faucet | Supernova" />
+    <meta
+      name="twitter:description"
+      content="Faucet is a tool for get testnet tokens in order to test Supernova"
+    />
+    <meta name="twitter:image" content="public/logo_graphic.png" />
+    <meta name="twitter:site" content="@Supernovazone" />
     <title>
       Cosmfaucet : Multi-chain faucet server for cosmos based blockchain.
     </title>
